[gd_scene load_steps=10 format=3 uid="uid://pirxgisooq5v"]

[ext_resource type="Script" path="res://code/pause_menu.gd" id="1_8wllr"]
[ext_resource type="PackedScene" uid="uid://dyxwwto3tctt8" path="res://scenes/menus/settings_menu.tscn" id="2_k8e11"]
[ext_resource type="Texture2D" uid="uid://b50sf2unkesnd" path="res://art/menu_background2.png" id="3_77q7i"]
[ext_resource type="LabelSettings" uid="uid://oywuoybmb4xf" path="res://art/label_settings.tres" id="3_h1xku"]
[ext_resource type="PackedScene" uid="uid://cv256xtrad2de" path="res://scenes/menus/information_menu.tscn" id="4_o0irp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_txf4r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pjma8"]
bg_color = Color(0.180392, 0.294118, 0.490196, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3muii"]
bg_color = Color(0.141176, 0.239216, 0.403922, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rxyrl"]

[node name="Main" type="ColorRect"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.301961, 0.301961, 0.301961, 1)
script = ExtResource("1_8wllr")

[node name="SettingsMenu" parent="." instance=ExtResource("2_k8e11")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="PauseMenu" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="PauseMenu"]
position = Vector2(32, 32)
texture = ExtResource("3_77q7i")

[node name="Button" type="Button" parent="PauseMenu"]
offset_top = 8.0
offset_right = 49.0
offset_bottom = 15.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_txf4r")
theme_override_styles/hover = SubResource("StyleBoxFlat_pjma8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3muii")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rxyrl")

[node name="Label" type="Label" parent="PauseMenu"]
offset_left = 1.0
offset_top = 6.0
offset_right = 49.0
offset_bottom = 16.0
size_flags_horizontal = 4
text = "RESUME"
label_settings = ExtResource("3_h1xku")

[node name="Button5" type="Button" parent="PauseMenu"]
offset_top = 56.0
offset_right = 49.0
offset_bottom = 63.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_txf4r")
theme_override_styles/hover = SubResource("StyleBoxFlat_pjma8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3muii")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rxyrl")

[node name="Label5" type="Label" parent="PauseMenu"]
offset_left = 1.0
offset_top = 54.0
offset_right = 49.0
offset_bottom = 64.0
size_flags_horizontal = 4
text = "Controls"
label_settings = ExtResource("3_h1xku")

[node name="Button3" type="Button" parent="PauseMenu"]
offset_top = 40.0
offset_right = 49.0
offset_bottom = 47.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_txf4r")
theme_override_styles/hover = SubResource("StyleBoxFlat_pjma8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3muii")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rxyrl")

[node name="Label3" type="Label" parent="PauseMenu"]
offset_left = 1.0
offset_top = 38.0
offset_right = 49.0
offset_bottom = 48.0
size_flags_horizontal = 4
text = "MENU"
label_settings = ExtResource("3_h1xku")

[node name="Button4" type="Button" parent="PauseMenu"]
offset_top = 24.0
offset_right = 49.0
offset_bottom = 31.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_txf4r")
theme_override_styles/hover = SubResource("StyleBoxFlat_pjma8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3muii")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rxyrl")

[node name="Label4" type="Label" parent="PauseMenu"]
offset_left = 1.0
offset_top = 22.0
offset_right = 49.0
offset_bottom = 32.0
size_flags_horizontal = 4
text = "Sound"
label_settings = ExtResource("3_h1xku")

[node name="Information" parent="." instance=ExtResource("4_o0irp")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="show_pause_menu" from="SettingsMenu" to="." method="_on_settings_menu_show_pause_menu"]
[connection signal="button_down" from="PauseMenu/Button" to="." method="_on_resume_button_down"]
[connection signal="button_down" from="PauseMenu/Button5" to="." method="_on_controls_button_down"]
[connection signal="button_down" from="PauseMenu/Button3" to="." method="_on_menu_button_down"]
[connection signal="button_down" from="PauseMenu/Button4" to="." method="_on_sound_button_down"]
[connection signal="show_menu" from="Information" to="." method="_on_information_show_menu"]
